src/objects/OV_Shelf__c.object
<CustomObject>
    <description>One View Shelf for Displaying Shelf Tiles</description>
    <fields>
        <fullName>Colour__c</fullName>
        <defaultValue>&quot;#ae2085&quot;</defaultValue>
        <description>hex defined Colour for the OneView Shelf to be represented on Shelf Tiles and Report Tiles that Relate</description>
        <inlineHelpText>hex defined Colour for the OneView Shelf  - for display on Shelf Tiles</inlineHelpText>
        <label>Colour</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shelf_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person who approved creation of the shelf</description>
        <inlineHelpText>Person who approved creation of the shelf</inlineHelpText>
        <label>Shelf Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shelves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <description>Themes to determine the colour to be displayed for the Shelf Tiles on a Shelf</description>
        <inlineHelpText>Themes to determine the colour to be displayed for the Shelf Tiles on a Shelf</inlineHelpText>
        <label>Theme</label>
        <picklist>
            <picklistValues>
                <fullName>Dark Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Olive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turquoise</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>One View Shelf</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Colour__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>One_View_Moments</fullName>
        <columns>NAME</columns>
        <columns>Colour__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OV_Shelf__c.Moment</value>
        </filters>
        <label>One View Moments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>One_View_Subjects</fullName>
        <columns>NAME</columns>
        <columns>Colour__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OV_Shelf__c.Subject</value>
        </filters>
        <label>One View Subjects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Shelf Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>One View Shelves</pluralLabel>
    <recordTypes>
        <fullName>Moment</fullName>
        <active>true</active>
        <description>Shelves with this Record Type will appear under the Tab labelled Moments within One View</description>
        <label>Moment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subject</fullName>
        <active>true</active>
        <description>Shelves with this Record Type will appear under the Tab labelled Subjects within One View</description>
        <label>Subject</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>